# examination_arrival

./: CMakeLists.txt  README.md  valgrind_check_data_gen.txt  valgrind_check_data_view_client.txt
src/generator/: data_gen.cpp  data_gen.h
src/ipclib/: ipccomm.h  ipclib.cpp  ipclib.h
src/view_client/: data_view.cpp  data_view.h
